# defttorrent

./: Cargo.toml  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
backup/src/: lib.rs  main.rs
backup/src/backend/: parser.rs
backup/src/requests/: mod.rs
src/: App.css  App.tsx  SecondPage.tsx  Settings.tsx  Sidebar.css  Sidebar.tsx  Streaming.tsx  TorrentItem.tsx  TorrentList.tsx  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: file.rs  mod.rs  parser.rs  torrentlist.rs
src-tauri/src/requests/: mod.rs  tracker.rs
src/gtk/: main.rs
src/requests/: tracker.rs
src/torrent/: mod.rs  parser.rs
