[package]
name = "defttorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5"] }
glib = "0.20.7"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
once_cell = "1.20.2"
rand = "0.9.0"
sha1 = "0.10.6"
tokio = { version = "1.43.0", features = ["full"] }
